--- a/.github/workflows/update-wiki.yml
+++ b/.github/workflows/update-wiki.yml
@@ -531,6 +531,7 @@ jobs:
           import json
           import sys
           import os
+          import re
           from pathlib import Path
           from content_processor import clean_deepwiki_content, get_page_title_from_content
           from section_categorizer import categorize_section
